--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
-</head>
-<body>
-    <a href="http://designbyxtina.com">my portfolio</a>
-    <h1>testing</h1>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>onion music project</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+        <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Kosugi+Maru" rel="stylesheet">
+        <script src="main.js"></script>
+        <style>
+            body {
+                background-color: rgb(66, 91, 8);
+                text-align: center;
+                font-family: 'Kosugi Maru', sans-serif;
+                color: #fff;
+            }
+
+            h1 {
+                font-family: 'Bungee Shade', cursive;
+            }
+
+            #description {
+                padding: 50px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>l a y e r s</h1>
+        <div>
+            <audio controls autoplay="true" preload="auto" loop muted>
+                <source src="./src/Layer-4.mp3" type="audio/mpeg">          
+            </audio>
+            <br><audio controls autoplay="true" preload="auto" loop muted>
+                <source src="./src/Layer-5.mp3" type="audio/mpeg">          
+            </audio>
+            <br><audio controls autoplay="true" preload="auto" loop muted>
+                <source src="./src/Layer-1.mp3" type="audio/mpeg">          
+            </audio>
+            <br><audio controls autoplay="true" preload="auto" loop muted>
+                <source src="./src/Layer-2.mp3" type="audio/mpeg">          
+            </audio>
+            <br><audio controls autoplay="true" preload="auto" loop muted>
+                <source src="./src/Layer-3.mp3" type="audio/mpeg">          
+            </audio>
+        </div>
+        <div id="description">
+            ** this is a rough prototype of the a music project I'm cookin'.
+            <br>click the speaker icon to unmute each layer and experiment.
+            <br>120 bpm
+        </div>
+        <footer>
+            <a href="http://designbyxtina.com" target="_blank">my portfolio</a>
+            <br>(`･Д･)ノ=☆ &copy; christina cho 2019
+        </footer>
+    </body>
 </html>
