--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>onion music project</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+        <link rel="icon" type="image/x-icon" href="./src/onion-icon.png">
         <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Kosugi+Maru" rel="stylesheet">
         <script src="main.js"></script>
         <style>
