fixed text, added webkit setting

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 background-color: rgb(66, 91, 8);
                 text-align: center;
                 font-family: 'Kosugi Maru', sans-serif;
+                -webkit-font-smoothing: antialised;
                 color: #fff;
             }
 
@@ -46,7 +47,7 @@
             </audio>
         </div>
         <div id="description">
-            ** this is a rough prototype of the a music project I'm cookin'.
+            ** this is a rough prototype of a music project I'm cookin'.
             <br>click the speaker icon to unmute each layer and experiment.
             <br>120 bpm
         </div>
